src/qml/qml/qqmlvmemetaobject.cpp
@@ -731,8 +731,8 @@ int QQmlVMEMetaObject::metaCall(QObject *o, QMetaObject::Call c, int _id, void *
                                 if (!v) {
                                     *(md->data() + id) = cache->engine->newVariantObject(QVariant());
                                     v = (md->data() + id)->as<QV4::VariantObject>();
+                                    QQml_valueTypeProvider()->initValueType(t, v->d()->data);
                                 }
-                                QQml_valueTypeProvider()->initValueType(t, v->d()->data);
                                 needActivate = !QQml_valueTypeProvider()->equalValueType(t, a[0], v->d()->data);
                                 QQml_valueTypeProvider()->writeValueType(t, a[0], v->d()->data);
                             }
